Add attach and detach listeners on view along with adding broadcast receivers

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,9 @@ android {
     }
     buildTypes {
         debug {
-            debuggable false
-            shrinkResources true
-            minifyEnabled true
+            debuggable true
+            shrinkResources false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
